This is K-Mod version 0.93.
If you have any questions, comments, suggetsions, bug reports, etc. Post here: http://forums.civfanatics.com/showthread.php?p=10094243

--

v0.94* changelist

 + drafted units are now included in the stats screen's units-built tally.
 + global warming can no longer turn desert (or anything else) into coast. [I don't think this feature made the game more fun, and there were a few minor problems with it.]
 + Cottages and hamlets destroyed by the volcano will no longer leave city ruins.
 + The volcano event now has a chance of increasing the food yield of adjacent tiles (in addition to the original effects); as part of this change, I also fixed the Pythong API so that calculateNatureYield() actually works. I see that the same bug exists in serveral other python functions, but I'll only fix it when I need the functions; also, getPlotExtraYield() is now available in python.

--

v0.93 changelist

 + Changed Odeon culture from 3 to 2.
 + Changed Arabian Madrassa culture from 4 to 3
 + Changed culture from Great Works to be base_rate * era, rather than base_rate * (era+1)
 + Reverted State Property upkeep back to 'low' [Now that state property no longer eliminates colony maintenance, and corporations come into the game earlier, I feel that state property is not too powerful on low upkeep.]
 + Increased Representation upkeep from 'medium' to 'high'
 + Increased cost of public transport to 200 (from 150)
 + Global warming can no longer strike impassable peak tiles
 + Fixed a bug which caused terrain to be degraded at the same as trees were degraded. [The correct behaviour is jungle->forest->nothing before any terrain degration takes place.]
 + Fixed problem which sometimes caused towns not to be removed when global warming made the land uninhabitable. [I'm in two minds about whether desert towns should be allowed to stay; but for now I'm disabling it.]
 + Minor adjustments to the environmental advisor screen.